fix overflow on view proposal page

--- a/client/styles/pages/_listing_page.scss
+++ b/client/styles/pages/_listing_page.scss
@@ -36,7 +36,7 @@
         .stats-tile-figure-major {
             font-size: 28px;
             line-height: 1.25;
-            text-overflow: break-word;
+            overflow-wrap: break-word;
         }
         .stats-tile-figure-minor {
             color: #888;
